--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f8ff;
-    padding: 40px;
-}
-h1 {
-    color: #2c3e50;
+  background-color: #f2f8ff;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  padding-top: 50px;
 }
